src/App.css
.App {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}


.colour-palette {
  display: flex;
  flex-direction: row;
}

.colour-dot {
  border-radius: 50%;
  width: 60px;
  height: 60px;
  margin: 15px;
}

/* keep for Pokeball spinner later */
/* @keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
} */

.scrollable-menu {
  max-height: 200px; 
  max-width: 25%;
  background-color: #20242b;
  overflow-y: auto;
  border: 2px solid #2e333b ;
  border-radius: 25px;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.6);
}

.menu {
  list-style-type: none;
}

::-webkit-scrollbar {
  width: 12px;
}

::-webkit-scrollbar-thumb {
  background-color: #888;
  border-radius: 25px;
}

::-webkit-scrollbar-thumb:hover {
  background-color: #555;
}

